syntax = "proto3";

package task;

// Сообщение для представления задачи
message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string deadline = 4;
  string status = 5;
  string user_id = 6;
}

// Сообщение для запроса создания задачи
message CreateTaskRequest {
  Task task = 1;
}

// Ответ на запрос создания задачи
message CreateTaskResponse {
  string id = 1;
}

// Сообщение для запроса получения задачи
message GetTaskRequest {
  string id = 1;
}

// Ответ на запрос получения задачи
message GetTaskResponse {
  Task task = 1;
}

// Сообщение для запроса обновления задачи
message UpdateTaskRequest {
  Task task = 1;
}

// Ответ на запрос обновления задачи
message UpdateTaskResponse {
  Task task = 1;
}

// Сообщение для запроса удаления задачи
message DeleteTaskRequest {
  string id = 1;
}

// Ответ на запрос удаления задачи
message DeleteTaskResponse {
  string id = 1;
}

// Сервис для управления задачами
service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}
